--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
     <div id="weather">
-        <input type="text" class="search">
+        <input type="text" placeholder="Enter City Name" class="search" >
         <div class="content">
             <h1 class="capital">
-                <span class="city">Ho Chi Minh</span>
+                <span class="city"></span>
                 <span>,</span>
-                <span class="country">VN</span>
+                <span class="country"></span>
             </h1>
             <div class="time"></div>
             <div class="tempature">
